[tool.poetry]
name = "typeform-py"
version = "0.1.0"
description = "Simple CLI client to scroll through reddit posts"
authors = ["Noelle <73260931+No767@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
praw = "^7.7.0"
typer = {extras = ["all"], version = "^0.9.0"}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
